Fix Misalignment Text Footer

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -44,4 +44,5 @@
 */
 #page-footer p {
     font-size: 0.9rem;
+    margin: 12px 0px 12px 0px;
 }
